<resources>
    <string name="app_name">MenuTest</string>
    <string name="menu_Font">字体大小</string>string>
    <string name="font_10">小</string>string>
    <string name="font_16">中</string>string>
    <string name="font_20">大</string>string>
    <string name="plain_item">普通菜单项</string>string>
    <string name="menu_Color">字体颜色</string>string>
    <string name="red_font">红色</string>string>
    <string name="black_font">黑色</string>string>



</resources>
