<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/menu_Font">
        <menu>

                <item
                    android:id="@+id/font_10"
                    android:title="@string/font_10" />
                <item
                    android:id="@+id/font_16"
                    android:title="@string/font_16" />
                <item
                    android:id="@+id/font_20"
                    android:title="@string/font_20" />


        </menu>
    </item>
    <item
        android:id="@+id/plain_item"
        android:title="@string/plain_item">

    </item>
    <item android:title="@string/menu_Color">
        <menu>

                <item
                    android:id="@+id/red_font"
                    android:title="@string/red_font"/>
                <item
                    android:id="@+id/black_font"
                    android:title="@string/black_font"/>

        </menu>

    </item>
</menu>